--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "@mui/material": "^5.0.3",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap-4-react": "0.0.59",
@@ -55,6 +54,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.19"
+    "@testing-library/react": "^11.2.7",
+    "@types/react-redux": "^7.1.19",
+    "react-test-renderer": "^17.0.2"
   }
 }
